# weather-desktop

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  README.md  build-all.sh  build.sh  cleanup.sh  index.html  make-icon  params.json  pbuild.sh  resize-icon  uninstall.sh  weather-desktop.kdev4
.kdev4/: weather-desktop.kdev4
doc/: CMakeLists.txt  Documentation.txt  index.docbook
images/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  application.cpp  application.h  cache.cpp  cache.h  config.h  geocoding.cpp  geocoding.h  main.cpp  main.h  settings.kcfg  settings.kcfgc  unitylauncher.cpp  unitylauncher.h  utilities.cpp  weather-desktop.cpp  weather-desktop.desktop  weather-desktop.h  weather-desktop.notifyrc  weather-desktopui.rc
src/forecast/: alert.cpp  alert.h  alertslist.cpp  alertslist.h  conditions.cpp  conditions.h  datablock.cpp  datablock.h  datapoint.cpp  datapoint.h  forecast.cpp  forecast.h  weatherblock.cpp  weatherblock.h  weatherpoint.cpp  weatherpoint.h
src/forecast.io/: conditions.cpp  conditions.h  datapoint.cpp  datapoint.h  forecastio.cpp  forecastio.h
src/qml/: Alert.qml  AppView.qml  CMakeLists.txt  DailyForecast.qml  DropDown.qml  ErrorDialog.qml  Form.qml  FormHeader.qml  FormItem.qml  Line.qml  List.qml  Panel.qml  ScrollArea.qml  ScrollBar.qml  SettingsSheet.qml  SheetDialog.qml  Style.qml  WeatherConditions.qml  WeatherForecast.qml  WeatherHeader.qml  WeatherHourly.qml  WeatherPanel.qml  WeatherTile.qml  WeatherToday.qml  WeatherView.qml  main.qml
src/qml/images/: CMakeLists.txt
src/weather/: alert.cpp  alert.h  conditions.cpp  conditions.h  datablock.cpp  datablock.h  datapoint.cpp  datapoint.h  location.cpp  location.h  managedlist.cpp  managedlist.h  service.cpp  service.h  units.cpp  units.h  weather.cpp  weather.h
src/worldweather/: conditions.cpp  conditions.h  worldweatheronline.cpp  worldweatheronline.h
src/wunderground/: conditions.cpp  conditions.h  wunderground.cpp  wunderground.h
